--- a/index.html
+++ b/index.html
@@ -45,6 +45,24 @@
                 </section>
             </main>
         </div>
+        <div id="loader-overlay" class="hidden">
+            <div class="loader-container">
+                <div class="loader-circle">
+                    <svg class="progress-ring" width="120" height="120">
+                        <circle
+                            class="progress-ring__circle"
+                            stroke="#4CAF50"
+                            stroke-width="8"
+                            fill="transparent"
+                            r="50"
+                            cx="60"
+                            cy="60"
+                        />
+                    </svg>
+                    <div class="progress-percentage">0%</div>
+                </div>
+            </div>
+        </div>
         <script src="./ressources/js/home.js"></script>
     </body>
 </html>
