--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>smooflix - Projekt</title>
         <link rel="icon" href="data:," />
-        <link rel="stylesheet" href="./css/styles.css" />
+        <link rel="stylesheet" href="./ressources/css/styles.css" />
     </head>
     <body>
         <div class="wrapper">
